@@ -1,3 +1,10 @@
+2001-12-27  Dave Peticolas  <dave@krondo.com>
+
+	* src/backend/postgres/test/test-db.c: expand testing
+
+	* src/engine/Transaction.c: fix bugs. keep positive editlevel
+	while committing and rolling back transaction.
+
 2001-12-25  Dave Peticolas  <dave@krondo.com>
 
 	* src/backend/postgres/test/test-db.c: test rollback
